@@ -126,6 +126,8 @@ GLIBMM_CHECK_PERL([5.6.0])
 #  Function checks
 #########################################################################
 
+AC_CHECK_FUNC(mkfifo, AC_DEFINE(HAVE_MKFIFO))
+
 # functions used in demos/gtk-demo. Undefined in config.h.
 AC_LANG_PUSH(C++)
 AC_MSG_CHECKING([for flockfile])
