@@ -19,6 +19,7 @@
 	
 #undef HAVE_FLOCKFILE
 #undef HAVE_FUNLOCKFILE
+#undef HAVE_MKFIFO
 #undef GETC_UNLOCKED
 
 #endif /* GLIBMM_CONFIGURE */
