@@ -1,4 +1,14 @@
 2005-11-30  Murray Cumming <murrayc@murrayc.com>
+  
+	* configure.in:
+	* gtk/gtkmmconfig.h.in: Check for the mkifofs() 
+	function (not available in windows, apparently), and 
+	define HAVE_MKIFOFS.
+	* examples/book/input/main.cc: Do not use mkifofs 
+	if it is not present, to fix build on Windows.
+	Bug #309031 from haleykd.
+
+2005-11-30  Murray Cumming <murrayc@murrayc.com>
 
 	* docs/reference/Doxyfile.in: Added ALIASES 
 	for @newin2p2, @newin2p4, @newin2p6, @newin2p8, and 
